# AI_fronted_backend_knowledge_base

./: .env.tauri  .gitignore  CLAUDE.md  README.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
docs/: DEVELOPMENT_PLAN.md
public/: manifest.webmanifest
scripts/: build-index.mjs  export-search-index.ts  generate-snapshot.mjs  validate-prompts.mjs  vite-search-index-plugin.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/catalog/: CategoryChips.tsx  ComponentCard.tsx  ComponentImportPanel.tsx  ComposerPicker.tsx  CopyButton.tsx  CopyImageButton.tsx  FilterChips.tsx  Pagination.tsx  PromptCard.tsx  SearchBar.tsx  SidePager.tsx  StyleCard.tsx  StyleImportPanel.tsx
src/components/dynamic/: DynamicBackground.tsx  DynamicSurface.tsx  canvasEffects.tsx  dynamicEffects.css  useCanvasLoop.ts
src/components/layout/: LanguageSwitcher.tsx  Layout.tsx
src/components/motion/: MotionPanel.tsx  (+1 more)
src/contexts/: AppContext.tsx
src/data/: searchIndex.ts
src/hooks/: useCatalogSearch.ts  useComponentFilter.ts  useMediaQuery.ts  useMotionTuning.ts  useStyleFilter.ts
src/lib/: codeExport.ts  i18n.ts  messages.ts  platform.ts  previewLabels.ts  promptComposer.ts  search.ts  styleCatalog.ts  stylePoster.ts  themeApplier.ts
src/pages/: ComposerPage.tsx  HomePage.tsx
src/routes/: index.tsx
src/types/: agent.ts  catalog.ts
(+28 files in other folders)
