[package]
name = "prompt-assistant"
version = "0.4.0"
description = "Prompt Assistant — UI Style & Component Prompt Platform"
authors = ["Prompt Assistant"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
